          community feed-back.
        - Added "roleMappings" property to Context.
        - Reverted represent*() auto-matching support for further 
          discussions. Suggested by Tim Peierls.
        - Added constuctors with feed URI in the Feed class of the Atom 
          extension.
        - Added "indent" property to DomRepresentation. Suggested by
          Cliff Binstock.
     - Misc
        - Upgraded Simple server to version 4.1.2. 
          Contributed by Niall Gallagher.
        - Fixed Javadocs typos in Router and Resource. Contributed by
          Raif S. Naffah.

- 1.2 Milestone 1 (2009-01-23)
    - Breaking changes
        - The engine has been moved from "com.noelios.restlet" to
          the "org.restlet.engine" package, simplifying the packaging.
        - All engine extensions have been moved to "org.restlet.ext"
          packages.
        - The com.noelios.restlet.ext.spring extension has been merged
          with org.restlet.ext.spring.
        - Moved org.restlet.util.DateUtils, ByteUtils and Engine 
          classes to org.restlet.engine.* packages.
    - Enhancements
        - Internal HTTP connector now supports HTTPS connections.
          Contributed by Kevin Conaway.
        - Added a Lucene extension including a Solr client connector
          contributed by Remi Dewitte. Also contains a useful 
          TikaRepresentation to extract metadata from a representation
          using Lucene Tika parsing and analysis library. Suggested by
          Ben Johnson.
        - The Atom Service class now supports getting documents from
          other protocols than HTTP.
        - Updated org.restlet.Component to support validating parsing. 
          Contributed by Raif S. Naffah.
        - XmlRepresentation now has "entityResolver", "errorHandler", 
          "schema", "xIncludeAware" and "validating" properties. 
          Contributed by Raif S. Naffah.
    - API changes